; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp32s2beta/extr_brownout.c_rtc_brownout_isr_handler.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp32s2beta/extr_brownout.c_rtc_brownout_isr_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RTC_CNTL_INT_CLR_REG = common dso_local global i32 0, align 4
@RTC_CNTL_BROWN_OUT_INT_CLR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"\0D\0ABrownout detector was triggered\0D\0A\0D\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @rtc_brownout_isr_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtc_brownout_isr_handler(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @RTC_CNTL_INT_CLR_REG, align 4
  %4 = load i32, i32* @RTC_CNTL_BROWN_OUT_INT_CLR, align 4
  %5 = call i32 @REG_WRITE(i32 %3, i32 %4)
  %6 = call i32 (...) @xPortGetCoreID()
  %7 = icmp ne i32 %6, 0
  %8 = xor i1 %7, true
  %9 = zext i1 %8 to i32
  %10 = call i32 @esp_cpu_stall(i32 %9)
  %11 = call i32 @ets_printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 (...) @esp_restart_noos()
  ret void
}

declare dso_local i32 @REG_WRITE(i32, i32) #1

declare dso_local i32 @esp_cpu_stall(i32) #1

declare dso_local i32 @xPortGetCoreID(...) #1

declare dso_local i32 @ets_printf(i8*) #1

declare dso_local i32 @esp_restart_noos(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
